Individual Game Stats!

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,1 @@
-Change Scoring System - Recency Weightage
-Notifications
-Game Deletion
-Individual stat declaration
-Wordle Bot update notification system
-
-
+Notification - All games before Wordle 220 will be deleted by March 1st.
